--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -23,18 +23,36 @@
                   >Photos</a
                 >
               </li>
+              
+
+              <% if(user){ %>
               <li>
-                <a class="<%= link === 'login' && 'active' %>" href="/login"
-                  >Login</a
-                >
+                <a href="/logout">Logout</a>
               </li>
               <li>
                 <a
-                  class="<%= link === 'register' && 'active' %>"
-                  href="/register"
-                  >Register</a
+                  class="<%= link === 'dashboard' && 'active' %>"
+                  href="/users/dashboard"
+                  >Dashboard</a
                 >
               </li>
+              <% } else { %>
+
+                <li>
+                  <a class="<%= link === 'login' && 'active' %>" href="/login"
+                    >Login</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="<%= link === 'register' && 'active' %>"
+                    href="/register"
+                    >Register</a
+                  >
+                </li>
+
+              <% } %>
+
 
               <!-- <li><a href="services">Services</a></li>
               <li><a href="projects.html">Projects</a></li>
