--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -1,38 +1,40 @@
 <%- include("partials/_headers") %>
-  <!-- body -->
-  <body class="main-layout inner_page">
-    <!-- loader  -->
-    <div class="loader_bg">
-      <div class="loader"><img src="/images/loading.gif" alt="#" /></div>
-    </div>
-    <!-- end loader -->
+<!-- body -->
+<body class="main-layout inner_page">
+  <!-- loader  -->
+  <div class="loader_bg">
+    <div class="loader"><img src="/images/loading.gif" alt="#" /></div>
+  </div>
+  <!-- end loader -->
 
-    <!-- header -->
-<%- include("partials/_menu") %>
-   
-    <!-- end header inner -->
-    <!-- about -->
-    <div class="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="titlepage text_align_left">
-              <h2><%- photo.name %></h2>
-              <p>
-                <%- photo.description %>
-              </p>
-              <a class="read_more" href="about.html">Read More</a>
-            </div>
+  <!-- header -->
+  <%- include("partials/_menu") %>
+
+  <!-- end header inner -->
+  <!-- about -->
+  <div class="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="titlepage text_align_left">
+            <h2><%= photo.name %></h2>
+            <p><%= photo.description %></p>
+            <a class="read_more" href="about.html">
+              Artist: <%= photo.user.username %></a
+            >
           </div>
-          <div class="col-md-6">
-            <div class="about_img">
-              <figure><img src="/images/about_img.png" alt="#" /></figure>
-            </div>
+        </div>
+        <div class="col-md-6">
+          <div class="about_img">
+            <figure>
+              <img src=" <%= photo.url %> " alt="<%= photo.name %>" />
+            </figure>
           </div>
         </div>
       </div>
     </div>
-    <!-- end about -->
-    <!-- end footer -->
-<%- include("partials/_footer") %>
-    
+  </div>
+  <!-- end about -->
+  <!-- end footer -->
+  <%- include("partials/_footer") %>
+</body>
