--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -19,8 +19,8 @@
           <div class="titlepage text_align_left">
             <h2><%= photo.name %></h2>
             <p><%= photo.description %></p>
-            <a class="read_more" href="about.html">
-              Artist: <%= photo.user.username %></a
+            <a class="read_more" href="/users/<%= photo.user._id %>">
+              Artist: <%= photo.user.username %> </a
             >
           </div>
         </div>
