--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -20,8 +20,23 @@
             <h2><%= photo.name %></h2>
             <p><%= photo.description %></p>
             <a class="read_more" href="/users/<%= photo.user._id %>">
-              Artist: <%= photo.user.username %> </a
-            >
+              Artist: <%= photo.user.username %>
+            </a>
+
+            <div style="margin-top: 30px">
+              <ul style="display: flex; justify-content: space-between">
+                <li>
+                  <a style="min-width: 266px" class="read_more" href="#"
+                    >Update</a
+                  >
+                </li>
+                <li>
+                  <a style="min-width: 266px" class="read_more" href="/photos/<%= photo._id%>?_method=DELETE" onclick="return confirm('Are You Sure')"  
+                    >Delete</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="col-md-6">
