--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -24,6 +24,13 @@
                 >
               </li>
 
+              <li>
+                <a class="<%= link === 'contact' && 'active' %>" href="/contact"
+                  >Contact</a
+                >
+              </li>
+              
+
               <% if(user){ %>
 
               <li>
