--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,13 +22,21 @@
         </div>
         <div class="col-md-8 offset-md-2">
           <form id="request" class="main_form" action="/contact" method="POST">
+            <div class="col-md-12">
+              <div
+                style="display: none"
+                class="alert alert-success"
+                id="sendMessage"
+              ></div>
+            </div>
+
             <div class="row">
               <div class="col-md-12">
                 <input
                   class="form_control"
-                  placeholder="Your name"
+                  placeholder="Name"
                   type="type"
-                  name=" Name"
+                  name="Name"
                 />
               </div>
               <div class="col-md-12">
@@ -60,5 +68,43 @@
   </div>
   <!-- end contact -->
   <!-- end footer -->
-  <%- include("partials/_footer") %>
 
+  <script>
+    const form = document.querySelector("form");
+    const sendMessage = document.querySelector("#sendMessage");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const Name = form.Name.value;
+      const Email = form.Email.value;
+      const Message = form.Message.value;
+
+      try {
+        const res = await fetch("/contact", {
+          method: "POST",
+          body: JSON.stringify({ Name, Email, Message }),
+          headers: { "Content-Type": "application/json" },
+        });
+
+        const data = await res.json();
+
+        if (data.succeded) {
+          sendMessage.textContent = "Your Message Received Succesfully";
+          sendMessage.style.display = "block";
+
+          setTimeout(() => {
+            sendMessage.style.display = "none";
+            form.Name.value = "";
+            form.Email.value = "";
+            form.Message.value = "";
+          },5000);
+        }
+      } catch (err) {
+        console.log("ERR::", err);
+      }
+    });
+  </script>
+
+  <%- include("partials/_footer") %>
+</body>
