--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -23,25 +23,42 @@
               Artist: <%= photo.user.username %>
             </a>
 
+            <% if(isOwner) { %>
             <div style="margin-top: 30px">
               <ul style="display: flex; justify-content: space-between">
                 <li>
-                  <button style="min-width: 266px" class="read_more" data-toggle="modal" data-target="#updateModal"
-                    >Update</button>
+                  <button
+                    style="min-width: 266px"
+                    class="read_more"
+                    data-toggle="modal"
+                    data-target="#updateModal"
+                  >
+                    Update
+                  </button>
                 </li>
                 <li>
-                  <a style="min-width: 266px" class="read_more" href="/photos/<%= photo._id%>?_method=DELETE" onclick="return confirm('Are You Sure')"  
+                  <a
+                    style="min-width: 266px"
+                    class="read_more"
+                    href="/photos/<%= photo._id%>?_method=DELETE"
+                    onclick="return confirm('Are You Sure')"
                     >Delete</a
                   >
                 </li>
               </ul>
             </div>
+            <% } %>
           </div>
         </div>
         <div class="col-md-6">
           <div class="about_img">
             <figure>
-              <img style="z-index: 1;" src=" <%= photo.url %> " alt="<%= photo.name %>" />
+              <img
+                style="width: 100%; height: 100%"
+                style="z-index: 1"
+                src=" <%= photo.url %> "
+                alt="<%= photo.name %>"
+              />
             </figure>
           </div>
         </div>
@@ -107,7 +124,9 @@
                       class="form_control"
                       placeholder="Description"
                       rows="5"
-                    ><%= photo.description %></textarea>
+                    >
+<%= photo.description %></textarea
+                    >
                   </div>
 
                   <div style="margin-bottom: 20px" class="col-md-12">
@@ -127,7 +146,6 @@
       </div>
     </div>
   </div>
-
 
   <%- include("partials/_footer") %>
 </body>
