--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -27,7 +27,7 @@
           <% for (photo of photos) { %>
           <div class="col-lg-4 col-md-6 ma_bottom30">
             <div class="lightbox">
-              <img src="   <%- photo.url %>" alt="   <%- photo.name %>" />
+              <img style="width: 100%; height: 100%;" src="   <%- photo.url %>" alt="   <%- photo.name %>" />
               <div class="view_main">
                 <div class="pose">
                   <a class="read_more" href="/photos/<%- photo._id %>"
